[gd_scene load_steps=2 format=3 uid="uid://bxr6gtxdipkbl"]

[ext_resource type="Script" path="res://scripts/object_scripts/top_layer.gd" id="1_ts7ej"]

[node name="TopLayer" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_ts7ej")

[node name="PauseMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.498039)

[node name="CenterContainer" type="CenterContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PauseMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "PAUSED, IDIOT"
horizontal_alignment = 1

[node name="unpaws" type="Button" parent="PauseMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "I WANNA KEEP PLAYING"

[node name="exit" type="Button" parent="PauseMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "GET ME OUTTA HERE"

[node name="hb" type="Button" parent="PauseMenu/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "toggle collision viewer"

[node name="PanelContainer" type="PanelContainer" parent="PauseMenu/CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PauseMenu/CenterContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/CenterContainer/VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PauseMenu/CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "time scale (1)"
horizontal_alignment = 1

[node name="TimeScaleSlider" type="HSlider" parent="PauseMenu/CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
min_value = 0.01
max_value = 1.0
step = 0.01
value = 1.0

[connection signal="pressed" from="PauseMenu/CenterContainer/VBoxContainer/unpaws" to="." method="_on_unpaws_pressed"]
[connection signal="pressed" from="PauseMenu/CenterContainer/VBoxContainer/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="PauseMenu/CenterContainer/VBoxContainer/hb" to="." method="_on_hb_pressed"]
[connection signal="value_changed" from="PauseMenu/CenterContainer/VBoxContainer/PanelContainer/MarginContainer/VBoxContainer/TimeScaleSlider" to="." method="_on_time_scale_slider_value_changed"]
